@@ -7,25 +7,30 @@
 #include <libavformat/avformat.h>
 #include <libavutil/imgutils.h>
 #include <libswscale/swscale.h>
-#include "allheaders.h"
+#include <leptonica/allheaders.h>
+#include <tesseract/capi.h>
 #include "hardsubx.h"
-#include "capi.h"
 
 char* _process_frame_white_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, int width, int height, int index)
 {
 	//printf("frame : %04d\n", index);
 	PIX *im;
+    PIX *gray_im;
+    PIX *sobel_edge_im;
+    PIX *dilate_gray_im;
 	PIX *edge_im;
 	PIX *lum_im;
 	PIX *feat_im;
-	char *subtitle_text=NULL;
+    char *subtitle_text;
+
+	subtitle_text = NULL;
 	im = pixCreate(width,height,32);
 	lum_im = pixCreate(width,height,32);
 	feat_im = pixCreate(width,height,32);
-	int i,j;
-	for(i=(3*height)/4;i<height;i++)
+
+	for(int i=(3*height)/4;i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			int p=j*3+i*frame->linesize[0];
 			int r=frame->data[0][p];
@@ -42,15 +47,14 @@ char* _process_frame_white_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, i
 	}
 
 	//Handle the edge image
-	edge_im = pixCreate(width,height,8);
-	edge_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
-	edge_im = pixSobelEdgeFilter(edge_im, L_VERTICAL_EDGES);
-	edge_im = pixDilateGray(edge_im, 21, 11);
-	edge_im = pixThresholdToBinary(edge_im,50);
+	gray_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
+	sobel_edge_im = pixSobelEdgeFilter(gray_im, L_VERTICAL_EDGES);
+	dilate_gray_im = pixDilateGray(sobel_edge_im, 21, 11);
+	edge_im = pixThresholdToBinary(dilate_gray_im,50);
 
-	for(i=3*(height/4);i<height;i++)
+	for(int i=3*(height/4);i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			unsigned int p1,p2,p3;
 			pixGetPixel(edge_im,j,i,&p1);
@@ -93,25 +97,38 @@ char* _process_frame_white_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, i
 			fatal(EXIT_MALFORMED_PARAMETER,"Invalid OCR Mode");
 	}
 
-	pixDestroy(&lum_im);
-	pixDestroy(&im);
-	pixDestroy(&edge_im);
-	pixDestroy(&feat_im);
+    pixDestroy(&im);
+    pixDestroy(&gray_im);
+    pixDestroy(&sobel_edge_im);
+    pixDestroy(&dilate_gray_im);
+    pixDestroy(&edge_im);
+    pixDestroy(&lum_im);
+    pixDestroy(&feat_im);
 
 	return subtitle_text;
 }
 
 char *_process_frame_color_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, int width, int height, int index)
 {
+    PIX *im;
+    PIX *hue_im;
+    PIX *gray_im;
+    PIX *sobel_edge_im;
+    PIX *dilate_gray_im;
+    PIX *edge_im;
+    PIX *gray_im_2;
+    PIX *edge_im_2;
+    PIX *pixd;
+    PIX *feat_im;
 	char *subtitle_text=NULL;
-	PIX *im;
-	im = pixCreate(width,height,32);
-	PIX *hue_im = pixCreate(width,height,32);
 
-	int i,j;
-	for(i=0;i<height;i++)
+	im = pixCreate(width,height,32);
+    hue_im = pixCreate(width,height,32);
+    subtitle_text=NULL;
+
+	for(int i=0;i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			int p=j*3+i*frame->linesize[0];
 			int r=frame->data[0][p];
@@ -120,28 +137,27 @@ char *_process_frame_color_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, i
 			pixSetRGBPixel(im,j,i,r,g,b);
 			float H,S,V;
 			rgb_to_hsv((float)r,(float)g,(float)b,&H,&S,&V);
-			if(abs(H-ctx->hue)<20)
+			if(fabsf(H-ctx->hue)<20)
 			{
 				pixSetRGBPixel(hue_im,j,i,r,g,b);
 			}
 		}
 	}
 
-	PIX *edge_im = pixCreate(width,height,8),*edge_im_2 = pixCreate(width,height,8);
-	edge_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
-	edge_im = pixSobelEdgeFilter(edge_im, L_VERTICAL_EDGES);
-	edge_im = pixDilateGray(edge_im, 21, 1);
-	edge_im = pixThresholdToBinary(edge_im,50);
-	PIX *pixd = pixCreate(width,height,1);
-	pixSauvolaBinarize(pixConvertRGBToGray(hue_im,0.0,0.0,0.0), 15, 0.3, 1, NULL, NULL, NULL, &pixd);
+	gray_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
+    sobel_edge_im = pixSobelEdgeFilter(gray_im, L_VERTICAL_EDGES);
+	dilate_gray_im = pixDilateGray(sobel_edge_im, 21, 1);
+    edge_im = pixThresholdToBinary(dilate_gray_im,50);
 
-	edge_im_2 = pixConvertRGBToGray(hue_im,0.0,0.0,0.0);
-	edge_im_2 = pixDilateGray(edge_im_2, 5, 5);
+    gray_im_2 = pixConvertRGBToGray(hue_im,0.0,0.0,0.0);
+    edge_im_2 = pixDilateGray(gray_im_2, 5, 5);
 
-	PIX *feat_im = pixCreate(width,height,32);
-	for(i=3*(height/4);i<height;i++)
+	pixSauvolaBinarize(gray_im_2, 15, 0.3, 1, NULL, NULL, NULL, &pixd);
+
+	feat_im = pixCreate(width,height,32);
+	for(int i=3*(height/4);i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			unsigned int p1,p2,p3,p4;
 			pixGetPixel(edge_im,j,i,&p1);
@@ -186,12 +202,16 @@ char *_process_frame_color_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, i
 			fatal(EXIT_MALFORMED_PARAMETER,"Invalid OCR Mode");
 	}
 
-	pixDestroy(&feat_im);
-	pixDestroy(&im);
-	pixDestroy(&edge_im);
-	pixDestroy(&hue_im);
-	pixDestroy(&edge_im_2);
-	pixDestroy(&pixd);
+    pixDestroy(&im);
+    pixDestroy(&hue_im);
+    pixDestroy(&gray_im);
+    pixDestroy(&sobel_edge_im);
+    pixDestroy(&dilate_gray_im);
+    pixDestroy(&edge_im);
+    pixDestroy(&gray_im_2);
+    pixDestroy(&edge_im_2);
+    pixDestroy(&pixd);
+    pixDestroy(&feat_im);
 
 	return subtitle_text;
 }
@@ -199,14 +219,23 @@ char *_process_frame_color_basic(struct lib_hardsubx_ctx *ctx, AVFrame *frame, i
 void _display_frame(struct lib_hardsubx_ctx *ctx, AVFrame *frame, int width, int height, int timestamp)
 {
 	// Debug: Display the frame after processing
-	PIX *im;
-	im = pixCreate(width,height,32);
-	PIX *hue_im = pixCreate(width,height,32);
+    PIX *im;
+    PIX *hue_im;
+    PIX *gray_im;
+    PIX *sobel_edge_im;
+    PIX *dilate_gray_im;
+    PIX *edge_im;
+    PIX *gray_im_2;
+    PIX *edge_im_2;
+    PIX *pixd;
+    PIX *feat_im;
 
-	int i,j;
-	for(i=0;i<height;i++)
+	im = pixCreate(width,height,32);
+	hue_im = pixCreate(width,height,32);
+
+	for(int i=0;i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			int p=j*3+i*frame->linesize[0];
 			int r=frame->data[0][p];
@@ -215,28 +244,27 @@ void _display_frame(struct lib_hardsubx_ctx *ctx, AVFrame *frame, int width, int
 			pixSetRGBPixel(im,j,i,r,g,b);
 			float H,S,V;
 			rgb_to_hsv((float)r,(float)g,(float)b,&H,&S,&V);
-			if(abs(H-ctx->hue)<20)
+			if(fabsf(H-ctx->hue)<20)
 			{
 				pixSetRGBPixel(hue_im,j,i,r,g,b);
 			}
 		}
 	}
 
-	PIX *edge_im = pixCreate(width,height,8),*edge_im_2 = pixCreate(width,height,8);
-	edge_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
-	edge_im = pixSobelEdgeFilter(edge_im, L_VERTICAL_EDGES);
-	edge_im = pixDilateGray(edge_im, 21, 1);
-	edge_im = pixThresholdToBinary(edge_im,50);
-	PIX *pixd = pixCreate(width,height,1);
-	pixSauvolaBinarize(pixConvertRGBToGray(hue_im,0.0,0.0,0.0), 15, 0.3, 1, NULL, NULL, NULL, &pixd);
+	gray_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
+    sobel_edge_im = pixSobelEdgeFilter(gray_im, L_VERTICAL_EDGES);
+	dilate_gray_im = pixDilateGray(sobel_edge_im, 21, 1);
+	edge_im = pixThresholdToBinary(dilate_gray_im,50);
 
-	edge_im_2 = pixConvertRGBToGray(hue_im,0.0,0.0,0.0);
-	edge_im_2 = pixDilateGray(edge_im_2, 5, 5);
+	gray_im_2 = pixConvertRGBToGray(hue_im,0.0,0.0,0.0);
+	edge_im_2 = pixDilateGray(gray_im_2, 5, 5);
 
-	PIX *feat_im = pixCreate(width,height,32);
-	for(i=3*(height/4);i<height;i++)
+    pixSauvolaBinarize(gray_im_2, 15, 0.3, 1, NULL, NULL, NULL, &pixd);
+
+	feat_im = pixCreate(width,height,32);
+	for(int i=3*(height/4);i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			unsigned int p1,p2,p3,p4;
 			pixGetPixel(edge_im,j,i,&p1);
@@ -250,33 +278,42 @@ void _display_frame(struct lib_hardsubx_ctx *ctx, AVFrame *frame, int width, int
 		}
 	}
 
-	char *txt=NULL;
+	// char *txt=NULL;
 	// txt = get_ocr_text_simple(ctx, feat_im);
 	// txt=get_ocr_text_wordwise_threshold(ctx, feat_im, ctx->conf_thresh);
 	// if(txt != NULL)printf("%s\n", txt);
 
-	pixDestroy(&im);
-	pixDestroy(&edge_im);
-	pixDestroy(&feat_im);
-	pixDestroy(&edge_im_2);
-	pixDestroy(&pixd);
-	pixDestroy(&hue_im);
+    pixDestroy(&im);
+    pixDestroy(&hue_im);
+    pixDestroy(&gray_im);
+    pixDestroy(&sobel_edge_im);
+    pixDestroy(&dilate_gray_im);
+    pixDestroy(&edge_im);
+    pixDestroy(&gray_im_2);
+    pixDestroy(&edge_im_2);
+    pixDestroy(&pixd);
+    pixDestroy(&feat_im);
 }
 
 char* _process_frame_tickertext(struct lib_hardsubx_ctx *ctx, AVFrame *frame, int width, int height, int index)
 {
 	PIX *im;
+    PIX *gray_im;
+    PIX *sobel_edge_im;
+    PIX *dilate_gray_im;
 	PIX *edge_im;
 	PIX *lum_im;
 	PIX *feat_im;
-	char *subtitle_text=NULL;
+	char *subtitle_text;
+
+    subtitle_text = NULL;
 	im = pixCreate(width,height,32);
 	lum_im = pixCreate(width,height,32);
 	feat_im = pixCreate(width,height,32);
-	int i,j;
-	for(i=(92*height)/100;i<height;i++)
+
+	for(int i=(92*height)/100;i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			int p=j*3+i*frame->linesize[0];
 			int r=frame->data[0][p];
@@ -293,15 +330,14 @@ char* _process_frame_tickertext(struct lib_hardsubx_ctx *ctx, AVFrame *frame, in
 	}
 
 	//Handle the edge image
-	edge_im = pixCreate(width,height,8);
-	edge_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
-	edge_im = pixSobelEdgeFilter(edge_im, L_VERTICAL_EDGES);
-	edge_im = pixDilateGray(edge_im, 21, 11);
-	edge_im = pixThresholdToBinary(edge_im,50);
+	gray_im = pixConvertRGBToGray(im,0.0,0.0,0.0);
+    sobel_edge_im = pixSobelEdgeFilter(gray_im, L_VERTICAL_EDGES);
+	dilate_gray_im = pixDilateGray(sobel_edge_im, 21, 11);
+	edge_im = pixThresholdToBinary(dilate_gray_im,50);
 
-	for(i=92*(height/100);i<height;i++)
+	for(int i=92*(height/100);i<height;i++)
 	{
-		for(j=0;j<width;j++)
+		for(int j=0;j<width;j++)
 		{
 			unsigned int p1,p2,p3;
 			pixGetPixel(edge_im,j,i,&p1);
@@ -322,10 +358,13 @@ char* _process_frame_tickertext(struct lib_hardsubx_ctx *ctx, AVFrame *frame, in
 	sprintf(write_path,"./im%04d.jpg",index);
 	pixWrite(write_path,im,IFF_JFIF_JPEG);
 
-	pixDestroy(&lum_im);
-	pixDestroy(&im);
-	pixDestroy(&edge_im);
-	pixDestroy(&feat_im);
+    pixDestroy(&im);
+    pixDestroy(&gray_im);
+    pixDestroy(&sobel_edge_im);
+    pixDestroy(&dilate_gray_im);
+    pixDestroy(&edge_im);
+    pixDestroy(&lum_im);
+    pixDestroy(&feat_im);
 
 	return subtitle_text;
 }
@@ -334,7 +373,7 @@ int hardsubx_process_frames_tickertext(struct lib_hardsubx_ctx *ctx, struct enco
 {
 	// Search for ticker text at the bottom of the screen, such as in Russia TV1 or stock prices
 	int got_frame;
-	int cur_sec,total_sec,progress;
+	int cur_sec = 0,total_sec,progress;
 	int frame_number = 0;
 	char *ticker_text = NULL;
 
@@ -375,14 +414,14 @@ int hardsubx_process_frames_tickertext(struct lib_hardsubx_ctx *ctx, struct enco
 	return 0;
 }
 
-int hardsubx_process_frames_linear(struct lib_hardsubx_ctx *ctx, struct encoder_ctx *enc_ctx)
+void hardsubx_process_frames_linear(struct lib_hardsubx_ctx *ctx, struct encoder_ctx *enc_ctx)
 {
 	// Do an exhaustive linear search over the video
 
 	int prev_sub_encoded = 1; // Previous seen subtitle encoded or not
 	int got_frame;
 	int dist = 0;
-	int cur_sec,total_sec,progress;
+	int cur_sec = 0,total_sec,progress;
 	int frame_number = 0;
 	int64_t prev_begin_time = 0, prev_end_time = 0; // Begin and end time of previous seen subtitle
 	int64_t prev_packet_pts = 0;
@@ -401,7 +440,7 @@ int hardsubx_process_frames_linear(struct lib_hardsubx_ctx *ctx, struct encoder_
 			if(got_frame && frame_number % 25 == 0)
 			{
 				float diff = (float)convert_pts_to_ms(ctx->packet.pts - prev_packet_pts, ctx->format_ctx->streams[ctx->video_stream_id]->time_base);
-				if(abs(diff) < 1000*ctx->min_sub_duration) //If the minimum duration of a subtitle line is exceeded, process packet
+				if(fabsf(diff) < 1000*ctx->min_sub_duration) //If the minimum duration of a subtitle line is exceeded, process packet
 					continue;
 
 				// sws_scale is used to convert the pixel format to RGB24 from all other cases
@@ -446,8 +485,8 @@ int hardsubx_process_frames_linear(struct lib_hardsubx_ctx *ctx, struct encoder_
 				{
 					if(subtitle_text)
 					{
-						dist = edit_distance(subtitle_text, prev_subtitle_text, strlen(subtitle_text), strlen(prev_subtitle_text));
-						if(dist < (0.2 * fmin(strlen(subtitle_text), strlen(prev_subtitle_text))))
+						dist = edit_distance(subtitle_text, prev_subtitle_text, (int) strlen(subtitle_text), (int) strlen(prev_subtitle_text));
+						if(dist < (0.2 * MIN(strlen(subtitle_text), strlen(prev_subtitle_text))))
 						{
 							dist = -1;
 							subtitle_text = NULL;
@@ -504,58 +543,58 @@ int hardsubx_process_frames_linear(struct lib_hardsubx_ctx *ctx, struct encoder_
 
 }
 
-int hardsubx_process_frames_binary(struct lib_hardsubx_ctx *ctx)
+void hardsubx_process_frames_binary(struct lib_hardsubx_ctx *ctx)
 {
 	// Do a binary search over the input video for faster processing
 	// printf("Duration: %d\n", (int)ctx->format_ctx->duration);
 	int got_frame;
 	int seconds_time = 0;
 	for(seconds_time=0;seconds_time<20;seconds_time++){
-	int64_t seek_time = (int64_t)(seconds_time*AV_TIME_BASE);
-	seek_time = av_rescale_q(seek_time, AV_TIME_BASE_Q, ctx->format_ctx->streams[ctx->video_stream_id]->time_base);
+        int64_t seek_time = seconds_time*AV_TIME_BASE;
+        seek_time = av_rescale_q(seek_time, AV_TIME_BASE_Q, ctx->format_ctx->streams[ctx->video_stream_id]->time_base);
 
-	int ret = av_seek_frame(ctx->format_ctx, ctx->video_stream_id, seek_time, AVSEEK_FLAG_BACKWARD);
-	// printf("%d\n", ret);
-	// if(ret < 0)
-	// {
-	// 	printf("seeking back\n");
-	// 	ret = av_seek_frame(ctx->format_ctx, -1, seek_time, AVSEEK_FLAG_BACKWARD);
-	// }
-	if(ret >= 0)
-	{
-		while(av_read_frame(ctx->format_ctx, &ctx->packet)>=0)
-		{
-			if(ctx->packet.stream_index == ctx->video_stream_id)
-			{
-				avcodec_decode_video2(ctx->codec_ctx, ctx->frame, &got_frame, &ctx->packet);
-				if(got_frame)
-				{
-					// printf("%d\n", seek_time);
-					if(ctx->packet.pts < seek_time)
-						continue;
-					// printf("GOT FRAME: %d\n",ctx->packet.pts);
-					// sws_scale is used to convert the pixel format to RGB24 from all other cases
-					sws_scale(
-							ctx->sws_ctx,
-							(uint8_t const * const *)ctx->frame->data,
-							ctx->frame->linesize,
-							0,
-							ctx->codec_ctx->height,
-							ctx->rgb_frame->data,
-							ctx->rgb_frame->linesize
-						);
-					// Send the frame to other functions for processing
-					_display_frame(ctx, ctx->rgb_frame,ctx->codec_ctx->width,ctx->codec_ctx->height,seconds_time);
-					break;
-				}
-			}
-			av_packet_unref(&ctx->packet);
-		}
-	}
-	else
-	{
-		printf("Seeking to timestamp failed\n");
-	}
+        int ret = av_seek_frame(ctx->format_ctx, ctx->video_stream_id, seek_time, AVSEEK_FLAG_BACKWARD);
+        // printf("%d\n", ret);
+        // if(ret < 0)
+        // {
+        // 	printf("seeking back\n");
+        // 	ret = av_seek_frame(ctx->format_ctx, -1, seek_time, AVSEEK_FLAG_BACKWARD);
+        // }
+        if(ret >= 0)
+        {
+            while(av_read_frame(ctx->format_ctx, &ctx->packet)>=0)
+            {
+                if(ctx->packet.stream_index == ctx->video_stream_id)
+                {
+                    avcodec_decode_video2(ctx->codec_ctx, ctx->frame, &got_frame, &ctx->packet);
+                    if(got_frame)
+                    {
+                        // printf("%d\n", seek_time);
+                        if(ctx->packet.pts < seek_time)
+                            continue;
+                        // printf("GOT FRAME: %d\n",ctx->packet.pts);
+                        // sws_scale is used to convert the pixel format to RGB24 from all other cases
+                        sws_scale(
+                                ctx->sws_ctx,
+                                (uint8_t const * const *)ctx->frame->data,
+                                ctx->frame->linesize,
+                                0,
+                                ctx->codec_ctx->height,
+                                ctx->rgb_frame->data,
+                                ctx->rgb_frame->linesize
+                            );
+                        // Send the frame to other functions for processing
+                        _display_frame(ctx, ctx->rgb_frame,ctx->codec_ctx->width,ctx->codec_ctx->height,seconds_time);
+                        break;
+                    }
+                }
+                av_packet_unref(&ctx->packet);
+            }
+        }
+        else
+        {
+            printf("Seeking to timestamp failed\n");
+        }
 	}
 }
 
