@@ -1,6 +1,7 @@
 0.89 (TBD)
 -----------------
 - Fix: ccx_demuxer_mxf.c: Parse framerate from MXF captions to fix caption timings.
+- Fix: hardsubx_decoder.c: Fix memory leaks using Leptonica API.
 - Fix: linux/Makefile.am: added some sources to enable rpms to be created.
 
 0.88 (2019-05-21)
